--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     // para implementar as imagens
     implementation 'com.github.bumptech.glide:glide:4.15.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
